--- a/style/index.css
+++ b/style/index.css
@@ -9,15 +9,24 @@
     box-sizing: border-box;
 }
 
-/* this is the btn-main style  -------------------------------------------*/
+/* this is the btn-main bold  style  -------------------------------------------*/
 .btn-primary{
     background-color: #FD6E0A;
     border: none;
     padding: 10px 15px;
     border-radius: 5px;
+    color: #fff;
     
     
     
+}
+
+.btn-primary-outline{
+    background-color: #fff;
+    border: solid 1px #FD6E0A;
+    padding: 10px 15px;
+    border-radius: 5px;
+    color: #FD6E0A;
 }
 
 
@@ -58,4 +67,148 @@
 
 .header-menu h1 span{
     color: #FD6E0A;
+}
+
+/* hero section codes start  */
+
+.intro{
+    display: flex;
+    align-items: center;
+} 
+
+.img-hero{
+    max-width: 380px;
+}
+
+.hero-section{
+    background-image: url("/images/developer.png");
+    background-repeat: no-repeat;
+    background-position: top left;
+    background-size: contain;
+
+    
+
+    
+}
+
+.cirle-bg{
+    background-image: url(/images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    background-size: 600px;
+}
+
+
+
+.dev-intro h1{
+    font-size: 65px;
+}
+
+.dev-intro p {
+    font-size: 12px;
+    font-weight: 300;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 10px;
+    margin-right: 100px;
+    margin-bottom: 10px;
+}
+
+
+/* hero section style ends here  */
+
+
+
+
+/* ------------------------------------------------------------------ */
+
+
+
+
+
+/* about us style start here  */
+
+
+.about-me{
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    padding: 100px;
+}
+
+.about-us{
+    margin: 80px auto;
+}
+
+.about-box{
+    background-color: #fff;
+    padding: 10px;
+    border: 1px solid black;
+    
+}
+
+.about-box h2{
+    padding: 15px 0;
+}
+
+.about-box p{
+    padding: 15px 0;
+}
+
+
+
+
+.list-about{
+    display: flex;
+    justify-content: space-around;
+}
+
+
+/* about us style ends here  */
+
+
+/* service section style start here  */
+
+.wh-do{
+    text-align: center;
+    
+}
+
+.wh-do h1{
+    font-size: 35px;
+}
+
+.wh-do p{
+    font-size: 15px;
+    font-weight: 500;
+    padding: 0px 100px;
+    
+}
+
+
+.services-section{
+    display: flex;
+    margin: 50px auto;
+}
+
+.services h1{
+ font-size: 20px;
+
+}
+
+.services img{
+    max-width: 20px;
+    padding: 10px 0;
+}
+
+.services p{
+    font-weight: 300;
+    font-size:10px;
+    padding: 10px 0;
+
+}
+
+.services{
+    padding: 20px;
+    box-shadow: 2px -1px 48px 11px rgba(230,230,230,1);
+    margin-right: 15px;
 }
